--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/xprmnts/personal_react_blog#readme",
   "dependencies": {
-    "express": "^4.15.4"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "mongoose": "^4.11.8",
+    "morgan": "^1.8.2",
+    "nodemon": "^1.11.0"
   }
 }
