--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.11.8",
     "morgan": "^1.8.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
+    "passport-local": "^1.0.0"
   }
 }
