--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min'",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
@@ -22,11 +23,13 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "jwt-simple": "^0.5.1",
+    "mocha": "^3.5.0",
     "mongoose": "^4.11.8",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "supertest": "^3.0.0"
   }
 }
